# dprofile

./: .gitignore  README.md  README_zh.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent_profile/: __init__.py  cli.py
agent_profile/profiles/ai-infra/: SOUL.md  manifest.yaml
agent_profile/profiles/architect/: USER.md
agent_profile/profiles/challenger/: AGENTS.md  USER.md
agent_profile/profiles/coding/: SOUL.md
agent_profile/profiles/completionist/: AGENTS.md  manifest.yaml
agent_profile/profiles/copywriter/: SOUL.md
agent_profile/profiles/customer-support/: manifest.yaml
agent_profile/profiles/data-analyst/: AGENTS.md  USER.md
agent_profile/profiles/debugger/: SOUL.md
agent_profile/profiles/designer/: manifest.yaml
agent_profile/profiles/executor/: USER.md  manifest.yaml
agent_profile/profiles/fitness-coach/: AGENTS.md  USER.md
agent_profile/profiles/founder-mode/: AGENTS.md
agent_profile/profiles/minimalist/: AGENTS.md  USER.md  manifest.yaml
agent_profile/profiles/ml-researcher/: AGENTS.md  USER.md
agent_profile/profiles/ops/: AGENTS.md
agent_profile/profiles/product-manager/: AGENTS.md  SOUL.md
agent_profile/profiles/reviewer/: manifest.yaml
agent_profile/profiles/sales/: AGENTS.md  USER.md
agent_profile/profiles/slow-thinker/: USER.md  manifest.yaml
agent_profile/profiles/social-media/: SOUL.md  USER.md  manifest.yaml
agent_profile/profiles/teacher/: SOUL.md  USER.md
dprofile/: __init__.py  cli.py
scripts/: agent_profile.py  dprofile.py
tests/: test_agent_profile.py  test_dprofile.py
(+67 files in other folders)
