[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dprofile"
version = "0.2.1"
description = "Agent profile switcher for USER.md, SOUL.md, and AGENTS.md persona sets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "pythias" }
]
keywords = ["agent", "profile", "persona", "prompt", "skill"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[project.scripts]
agent-profile = "agent_profile.cli:main"
dprofile = "agent_profile.cli:main"

[tool.setuptools.packages.find]
include = ["agent_profile*"]

[tool.setuptools.package-data]
agent_profile = ["profiles/**/*"]
